focus link fix
focus selector was making link not visible

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
   --link-color: white;
   --link-hover: #ff33;
   --link-active: #0080ff;
-  --link-focus: #0080ff;
+  --link-focus: #0043ff;
   --visited_links: #800055;
   --webT: #00ff00;
   --primary-font: 'Press Start 2P', cursive;
